wayland/xdgdecoration: ignore irrelevant preferred mode changes

Some clients (Firefox) request the preferred mode for some reason if it's not
honored by the compositor, which makes KWin send another configure event, which
makes the client send another request, infinitely in a loop.

While Firefox shouldn't do that, KWin should also not do a bunch of additional
work for no reason.

BUG: 518939